# cmakeDLL_example

./: CMakeLists.txt  README.md
include/: mylib.h
src/: mylib.cpp
